k8s/infra/platform/traefik/traefik-depl.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: traefik-depl
spec:
  selector:
    matchLabels:
      app: traefik
  replicas: 3
  template:
    metadata:
      labels:
        app: traefik
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - traefik
              topologyKey: kubernetes.io/hostname
      serviceAccountName: traefik-controller
      containers:
        - name: traefik
          image: traefik:v3.4
          args:
            - --accesslog
            - --log.level=INFO
            - --providers.kubernetesgateway
