k8s/infra/platform/traefik/traefik-srv.yaml
apiVersion: v1
kind: Service

metadata:
  name: traefik
spec:
  type: LoadBalancer
  selector:
    app: traefik
  ports:
    - name: http
      port: 80
      # Traefik listens on port 8000 for Gateway API traffic internally —
      # this is default → your Gateway must match this (see below).
      targetPort: 8000
      protocol: TCP
